--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.GridLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -18,26 +14,48 @@
 
         </android.support.design.widget.TextInputLayout>
 
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name"
-            app:layout_column="0"
-            app:layout_row="1" />
+            android:baselineAligned="false"
+            app:layout_column="0">
 
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Port"
-            app:layout_column="0"
-            app:layout_row="2" />
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Start Server"
+                    app:layout_column="0"
+                    app:layout_row="1" />
+
+            </ScrollView>
+
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/editText1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Port"
+                    app:layout_column="0"
+                    app:layout_row="1" />
+
+                </ScrollView>
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/button1"
@@ -45,37 +63,58 @@
             android:layout_height="wrap_content"
             android:text="Server connect"
             app:layout_column="0"
-            app:layout_row="3" />
+            app:layout_row="1" />
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Address"
-            app:layout_column="0"
-            app:layout_row="4" />
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="139dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Port"
-            app:layout_column="0"
-            app:layout_row="5" />
+            android:baselineAligned="false"
+            app:layout_row="2">
+
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/editText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Address"
+                    app:layout_column="1"
+                    app:layout_row="1" />
+
+            </ScrollView>
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/editText3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Port"
+                    app:layout_column="3"
+                    app:layout_row="1" />
+            </ScrollView>
+
+        </LinearLayout>
 
         <EditText
             android:id="@+id/editText4"
-            android:layout_width="140dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="City"
             app:layout_column="0"
-            app:layout_row="6" />
+            app:layout_row="3" />
 
         <Button
             android:id="@+id/button2"
@@ -83,7 +122,7 @@
             android:layout_height="wrap_content"
             android:text="Client connect"
             app:layout_column="0"
-            app:layout_row="7" />
+            app:layout_row="4" />
 
         <Spinner
             android:id="@+id/dropdown"
@@ -91,8 +130,6 @@
             android:layout_height="wrap_content"
             app:layout_column="0"
             app:layout_row="8" />
-
-
 
 
         <android.support.v4.widget.NestedScrollView
@@ -113,7 +150,7 @@
         </android.support.v4.widget.NestedScrollView>
 
 
-    </android.support.v7.widget.GridLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
